@@ -500,6 +500,13 @@ class ConnectedDatagramProtocol(DatagramProtocol):
         Usually this will be due to a DNS lookup failure.
         """
 
+    def connectionRefused(self):
+        """Called for connection refused error.
+
+        Note this is a result of ICMP message generated by *previous*
+        write.
+        """
+
 
 class FileWrapper:
     """A wrapper around a file-like object to make it behave as a Transport.
